added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -1,39 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!-- metadata -->
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-    <!-- metadata -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- title and favicon -->
+        <title>Web App</title>
+        <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
 
-    <!-- title and favicon -->
-    <title>Web App</title>
-    <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
+        <!-- js -->
+        <script type="module" src="app.js"></script>
 
-    <!-- js -->
-    <script type="module" src="app.js"></script>
+        <!-- fonts -->
+        <!-- see https://fonts.google.com/ -->
 
-    <!-- fonts -->
-    <!-- see https://fonts.google.com/ -->
+        <!-- css -->
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/global.css" />
+        <!-- add link for page specific css -->
+    </head>
 
-    <!-- css -->
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <!-- add link for page specific css -->
+    <body>
+        <header>
+            <img class="logo" src="assets/html_css_js.png" alt="logo" />
+            <h1>Web App</h1>
+        </header>
 
-</head>
+        <main>
+            <section class="header">
+                <div>logo</div>
+                <div>nav bar</div>
+                <div>cart/account</div>
+            </section>
 
-<body>
-    <header>
-        <img class="logo" src="assets/html_css_js.png" alt="logo">
-        <h1>Web App</h1>
-    </header>
+            <section class="featured">
+                <div>left</div>
+                <div>featured title</div>
+                <div>right</div>
+            </section>
 
-    <main>
+            <section class="trending-header">
+                <div>Trending</div>
+                <div>"View all" button</div>
+            </section>
+            <section class="trending">
+                <div>Game 1</div>
+                <div>Game 2</div>
+                <div>Game 3</div>
+                <div>Game 4</div>
+                <div>Game 5</div>
+                <div>Game 6</div>
+                <div>Game 7</div>
+                <div>Game 8</div>
+                <div>Game 9</div>
+                <div>Game 10</div>
+                <div>Game 11</div>
+                <div>Game 12</div>
+            </section>
 
-    </main>
-
-</body>
-
+            <section class="footer">
+                <div>Super fast</div>
+                <div>Reliable & safe</div>
+                <div>Customer support</div>
+                <div>Trustpilot</div>
+            </section>
+        </main>
+    </body>
 </html>
