added columns and rows to each class selector to create layout for site

--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
     <body>
         <header>
             <img class="logo" src="assets/html_css_js.png" alt="logo" />
-            <h1>Web App</h1>
+            <h1>My copy of instant-gaming.com</h1>
         </header>
 
         <main>
             <section class="header">
                 <div>logo</div>
-                <div>nav bar</div>
-                <div>cart/account</div>
+                <section class="navbar">
+                    <div>Filters</div>
+                    <div>Platforms</div>
+                </section>
+                <div class="cart">cart/account</div>
             </section>
-
             <section class="featured">
                 <div>left</div>
-                <div>featured title</div>
+                <div class="featured-title">featured title</div>
                 <div>right</div>
             </section>
 
@@ -55,9 +57,6 @@
                 <div>Game 7</div>
                 <div>Game 8</div>
                 <div>Game 9</div>
-                <div>Game 10</div>
-                <div>Game 11</div>
-                <div>Game 12</div>
             </section>
 
             <section class="footer">
