added aditional classes to manipulate text in header and in footer

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </section>
 
             <section class="trending-header">
-                <div>Trending</div>
-                <div>"View all" button</div>
+                <div class="trending-text">Trending</div>
+                <div class="view-all">"View all" button</div>
             </section>
             <section class="trending">
                 <div>Game 1</div>
@@ -60,10 +60,10 @@
             </section>
 
             <section class="footer">
-                <div>Super fast</div>
-                <div>Reliable & safe</div>
-                <div>Customer support</div>
-                <div>Trustpilot</div>
+                <div class="fast">Super fast</div>
+                <div class="safe">Reliable & safe</div>
+                <div class="support">Customer support</div>
+                <div class="trust">Trustpilot</div>
             </section>
         </main>
     </body>
