added columns inside of navbar rows, added placeholding search button

--- a/index.html
+++ b/index.html
@@ -32,8 +32,19 @@
             <section class="header">
                 <div>logo</div>
                 <section class="navbar">
-                    <div>Filters</div>
-                    <div>Platforms</div>
+                    <section class="filters">
+                        <div>Trending</div>
+                        <div>Pre-orders</div>
+                        <div>Upcoming</div>
+                        <div>Support 24/7</div>
+                    </section>
+                    <section class="platforms">
+                        <div>PC</div>
+                        <div>Playstation</div>
+                        <div>Xbox</div>
+                        <div>Nintendo</div>
+                        <button>"search"</button>
+                    </section>
                 </section>
                 <div class="cart">cart/account</div>
             </section>
