added images for games and added logo in header

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
             <img class="logo" src="assets/html_css_js.png" alt="logo" />
             <h1>My copy of instant-gaming.com</h1>
         </header>
-
         <main>
             <section class="header">
-                <div>logo</div>
+                <img class="logo2" src="./assets/logo.png" alt="instant-gaming-logo" />
                 <section class="navbar">
                     <section class="filters">
                         <div>Trending</div>
@@ -43,15 +42,15 @@
                         <div>Playstation</div>
                         <div>Xbox</div>
                         <div>Nintendo</div>
-                        <button>"search"</button>
+                        <button class="search">"search"</button>
                     </section>
                 </section>
                 <div class="cart">cart/account</div>
             </section>
             <section class="featured">
-                <div>left</div>
-                <div class="featured-title">featured title</div>
-                <div>right</div>
+                <div></div>
+                <div class="featured-title">Hogwarts Legacy</div>
+                <div></div>
             </section>
 
             <section class="trending-header">
@@ -59,15 +58,15 @@
                 <div class="view-all">"View all" button</div>
             </section>
             <section class="trending">
-                <div>Game 1</div>
-                <div>Game 2</div>
-                <div>Game 3</div>
-                <div>Game 4</div>
-                <div>Game 5</div>
-                <div>Game 6</div>
-                <div>Game 7</div>
-                <div>Game 8</div>
-                <div>Game 9</div>
+                <img class="spiderman" src="./assets/spiderman.jpg" alt="spiderman" />
+                <img class="frozen" src="./assets/frozen.jpg" alt="frozen-flame" />
+                <img class="mount" src="./assets/mount.jpg" alt="mount-&-blade" />
+                <img class="potion" src="./assets/potion.jpg" alt="potion-craft" />
+                <img class="wrc" src="./assets/wrc.jpg" alt="wrc-generations" />
+                <img class="farming" src="./assets/farming.jpg" alt="farming-simulator" />
+                <img class="cod" src="./assets/cod.jpg" alt="cod-modern-warfare" />
+                <img class="zoo" src="./assets/zoo.jpg" alt="planet-zoo" />
+                <img class="city" src="./assets/city.jpg" alt="cities-skylines" />
             </section>
 
             <section class="footer">
